--- a/EditProfile/Flows/Main/Birthday/Birthday.storyboard
+++ b/EditProfile/Flows/Main/Birthday/Birthday.storyboard
@@ -23,7 +23,9 @@
                                 <rect key="frame" x="24" y="463.33333333333331" width="345" height="35"/>
                                 <color key="tintColor" systemColor="systemGray2Color"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Save"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Save">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <real key="value" value="15"/>
